crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__program__qualified_names.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.very.long.packageName.withManySegments

fun useQualifiedName() {
  val name =
    kotlin.collections.mutableMapOf<String, kotlin.collections.List<String>>()
  println(name)
}

diagnostics:
(none)
