crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__program__section_visibility.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
;
class Before

// @formatter:off
class   A
// @formatter:on
// @formatter:off
class   B
// @formatter:on
class C

diagnostics:
(none)
