crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__program__top_level_blank_lines.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.demo

const val NAME = "demo"

fun greet() = "hello"

class Holder

diagnostics:
(none)
